Fixing spacing for mobile image

--- a/css/gc.css
+++ b/css/gc.css
@@ -506,7 +506,7 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  height: 484px;
+  height: 480px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
